Fix z-index issue in the hero

--- a/wp-content/themes/storefront-child/assets/css/theme/theme.css
+++ b/wp-content/themes/storefront-child/assets/css/theme/theme.css
@@ -669,10 +669,6 @@ input[type=search]:focus {
   z-index: 2;
 }
 
-.home .hero .container, .home .hero body .site .entry-content, body .site .home .hero .entry-content, .home .hero body .site .entry-title, body .site .home .hero .entry-title {
-  z-index: 1;
-}
-
 .hero {
   background-color: #F7CA6F;
 }
