--- a/wp-content/themes/storefront-child/assets/scss/theme/_hero.scss
+++ b/wp-content/themes/storefront-child/assets/scss/theme/_hero.scss
@@ -34,10 +34,6 @@
 		position: relative;
 		z-index: 2;
 	}
-
-	.container {
-		z-index: 1;
-	}
 }
 
 .hero {
